--- a/css/styleproject.css
+++ b/css/styleproject.css
@@ -108,7 +108,7 @@ li:hover {
 }
 
 .label .ball {
-  background: rgbrgb(74, 23, 90, 1);
+  background: rgb(74, 23, 90, 1);
   border-radius: 50%;
   height: 29px;
   width: 29px;
