--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ li:hover {
 
 
 .label .ball {
-    background: rgb(74, 23, 90, 1);
+    background: black;
     border-radius: 50%;
     height: 29px;
     width: 29px;
