--- a/css/stylecourse.css
+++ b/css/stylecourse.css
@@ -98,7 +98,7 @@ li:hover {
 
 
 .label .ball {
-    background: rgb(74, 23, 90, 1);
+    background: black;
     border-radius: 50%;
     height: 29px;
     width: 29px;
