--- a/css/stylecourse.css
+++ b/css/stylecourse.css
@@ -82,7 +82,7 @@ li:hover {
 .label{
     height: 32px;
   width: 65px;
-  background: rgb(74, 23, 90, 0.4);
+  background: black;
   padding: 5px 8px;
   border-radius: 50px;
   cursor:pointer;
