--- a/css/stylecourse.css
+++ b/css/stylecourse.css
@@ -85,7 +85,7 @@ li:hover {
   background: black;
   padding: 5px 8px;
   border-radius: 50px;
-  cursor:pointer;
+  cursor: pointer;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -189,7 +189,7 @@ li:hover {
     text-align: center;
     line-height: 35px;
     margin-left: 3px;
-    transition:all .25s;
+    transition:all 0.25s;
     box-shadow: 1px 2px 6px black;
   }
   
