--- a/css/styleproject.css
+++ b/css/styleproject.css
@@ -91,7 +91,7 @@ li:hover {
 .label {
   height: 32px;
   width: 65px;
-  background: black;
+  background: rgb(74, 23, 90, 0.4);
   padding: 5px 8px;
   border-radius: 50px;
   cursor: pointer;
