--- a/css/styleproject.css
+++ b/css/styleproject.css
@@ -13,13 +13,15 @@ html {
   padding: 0;
   min-height: 100%;
   overflow-x: hidden;
+  
 }
 
 body {
   scroll-behavior: smooth;
   font-family: sans-serif;
   background-color: rgba(24, 24, 146, 0.986);
-  line-height: 1.4;
+  line-height: 1.5;
+  font-size: 27px;
 }
 
 .header {
