--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,9 @@ section:nth-of-type(3) {
     transform: translate(45vw, -5vh);
     position: relative;
     box-sizing: border-box;
-    box-shadow: 1px 2px 6px #333;
+    box-shadow: 0 6px #333;
+    outline: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
@@ -270,7 +272,14 @@ section:nth-of-type(3) {
 }
 
 .container-curriculum:hover {
-    background-color: rgb(74, 23, 90, 1);
+    background-color: rgba(65, 63, 158, 1);
+    box-shadow: 0 4px #333;
+    top: 2px;
+}
+
+.container-curriculum:active{
+    box-shadow: 0 0 rgba(65, 63, 158, 1);
+    top: 6px;
 }
 /*******Mes notions vues en cours encart****/
 .incarnate {
@@ -521,14 +530,15 @@ section:nth-of-type(3) {
 /****Dark mode sur le bouton du CV****/
   .dark .container-curriculum{
       background-color: rgb(170, 155, 22);
-      box-shadow: 1px 2px 6px black;
+      box-shadow: 0 6px black;
   }
   .dark .container-curriculum a {
       color: black;
   }
 
   .dark .container-curriculum:hover{
-      background-color: rgba(148, 127, 9, 1);
+      background-color: rgb(170, 155, 22);
+      box-shadow: 0 4px black;
   }
 /****Dark mode sur l'encart des notions vue en cours****/
   .dark .incarnate{
