--- a/css/styleproject.css
+++ b/css/styleproject.css
@@ -26,10 +26,9 @@ body {
 
 .header {
   background-color: rgba(65, 63, 158, 1);
-  position: sticky;
   width: 100%;
   margin: 0;
-  padding-top: 0px;
+  padding-top: 20px;
   z-index: 10;
   top: 0;
   height: 10vh;
@@ -91,8 +90,7 @@ li:hover {
 }
 
 .label {
-  height: 32px;
-  width: 65px;
+ 
   background: rgb(74, 23, 90, 0.4);
   padding: 5px 8px;
   border-radius: 50px;
@@ -109,8 +107,8 @@ li:hover {
 .label .ball {
   background: black;
   border-radius: 50%;
-  height: 29px;
-  width: 29px;
+  height: 32px;
+  width: 32px;
   top: 2px;
   left: 5px;
   transform: translateX(0px);
@@ -134,7 +132,7 @@ li:hover {
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  margin-top: 94px;
+  margin-top: 100px;
 }
 
 .footer-distributed .footer-right {
@@ -143,6 +141,7 @@ li:hover {
   max-width: 100vw;
   display: flex;
   flex-direction: row;
+  margin-right: 30px;
 }
 
 .footer-distributed .footer-right a {
