style button course

--- a/css/stylecourse.css
+++ b/css/stylecourse.css
@@ -140,11 +140,14 @@ li:hover {
       background-color: rgba(65, 63, 158, 1);
       width: 400px; 
       border-radius: 50px;
-      box-shadow: 1px 2px 2px 3px #333;
+      box-shadow: 0 6px  #333;
+      cursor: pointer;
   }
 
   .card:hover{
-    background-color: rgba(74, 23, 90, 0.4);
+    background-color: rgba(65, 63, 158, 1);
+    box-shadow: 0 4px  #333;
+    top: 2px;
   }
 
   .card a{
